mk/projects/k8s_drupal_app/build/app/base/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    #cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/#custom-max-body-size
    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
    # See: https://andrewlock.net/fixing-nginx-upstream-sent-too-big-header-error-when-running-an-ingress-controller-in-kubernetes/
    #nginx.ingress.kubernetes.io/proxy-buffers-number: "16"
    #nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          ################
          # URL ROUTING #
          ################
          - path: /
            pathType: Prefix
            backend:
              service:
                name: drupal-cluster-ip-service
                port:
                  number: 80
